--- a/NovaPostManagerr/NovaPostManagerr/NovaPostManagerr.csproj
+++ b/NovaPostManagerr/NovaPostManagerr/NovaPostManagerr.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Application\Application.csproj" />
     <ProjectReference Include="..\NovaPostManagerr.Client\NovaPostManagerr.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.1" />
