--- a/NovaPostManagerr/NovaPostManagerr.Client/NovaPostManagerr.Client.csproj
+++ b/NovaPostManagerr/NovaPostManagerr.Client/NovaPostManagerr.Client.csproj
@@ -9,7 +9,21 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.1" />
+	
+	  <PackageReference Include="DevExpress.Blazor" Version="22.2.3" />
+	
+	  <PackageReference Include="DevExpress.Blazor.Server.WebAssembly" Version="22.2.3" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Pages\OrderPost.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
   </ItemGroup>
 
 </Project>
