--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -11,7 +11,7 @@
     <Folder Include="Mappers\" />
   </ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
 	</ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
@@ -24,11 +24,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Microsoft.AspNetCore.Http.Extensions">
-      <HintPath>C:\Program Files\dotnet\packs\Microsoft.AspNetCore.App.Ref\8.0.1\ref\net8.0\Microsoft.AspNetCore.Http.Extensions.dll</HintPath>
-    </Reference>
     <Reference Include="MyLib">
-      <HintPath>..\..\FarmCertification\Certification\Lib\MyLib.dll</HintPath>
+      <HintPath>..\Lib\MyLib.dll</HintPath>
     </Reference>
   </ItemGroup>
 
