--- a/NovaPostManagerr/NovaPostManagerr.Client/NovaPostManagerr.Client.csproj
+++ b/NovaPostManagerr/NovaPostManagerr.Client/NovaPostManagerr.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -9,11 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-	
-	  <PackageReference Include="DevExpress.Blazor" Version="22.2.3" />
-	
-	  <PackageReference Include="DevExpress.Blazor.Server.WebAssembly" Version="22.2.3" />
-	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.1" />
+	  <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.2" />
   </ItemGroup>
 
   <ItemGroup>
