Update Create, add get all document

--- a/NovaPostOrderManager/appsettings.json
+++ b/NovaPostOrderManager/appsettings.json
@@ -19,5 +19,5 @@
     "Enrich": [ "FromLogContext" ],
     "Destructure": []
   },
-  "LogPath": "Logs\\log-.txt"
+  "LogPath": "C:\\Work\\NovaPostOrderManager\\log-.txt"
 }
