--- a/NovaPostOrderManager/appsettings.json
+++ b/NovaPostOrderManager/appsettings.json
@@ -17,5 +17,5 @@
     "Enrich": [ "FromLogContext" ],
     "Destructure": []
   },
-  "LogPath": "C:\\Work\\NovaPostOrderManager\\log-.txt"
+  "LogPath": "log-.txt"
 }
