--- a/NovaPostOrderManager/Config.json
+++ b/NovaPostOrderManager/Config.json
@@ -9,6 +9,9 @@
       "FileName": "Config.json"
     },
     {
+      "FileName": "settings.json"
+    },
+    {
       "FileName": "sni.dll"
     },
     {
