Table was created to store pharmacy keys

--- a/NovaPostOrderManager/appsettings.json
+++ b/NovaPostOrderManager/appsettings.json
@@ -14,8 +14,7 @@
         "Name": "NovaPostOrderManager"
       }
     ],
-    "Enrich": [ "FromLogContext" ],
-    "Destructure": []
+    "Enrich": [ "FromLogContext" ]
   },
   "LogPath": "log-.txt"
 }
